[TERRA-383] add comment to getAllTestTagsToRun, cleanup (#441)
* Cleanup 1

* Cleanup 2

* Cleanup 3

* SpotlessApply