@@ -18,7 +18,6 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Tag;
@@ -30,9 +29,9 @@ public class SpendProfileUser extends ClearContextUnit {
   public static final String TEST_SPEND_PROFILE = "test-spend-profile";
 
   // only an owner on the spend profile can disable emails
-  TestUser spendProfileOwner = TestUser.chooseTestUserWithOwnerAccess();
+  final TestUser spendProfileOwner = TestUser.chooseTestUserWithOwnerAccess();
 
-  SamGroups trackedGroups = new SamGroups();
+  final SamGroups trackedGroups = new SamGroups();
 
   private static void expectListedUserWithPolicies(
       String email, String profile, SpendProfilePolicy... policies) throws JsonProcessingException {
@@ -222,7 +221,7 @@ public class SpendProfileUser extends ClearContextUnit {
     List<TestUser> expectedSpendUsers =
         TestUser.getTestUsers().stream()
             .filter(testUser -> testUser.spendEnabled.equals(TestUser.SpendEnabled.DIRECTLY))
-            .collect(Collectors.toList());
+            .toList();
     for (TestUser expectedSpendUser : expectedSpendUsers) {
       expectListedUserWithPolicies(expectedSpendUser.email, SpendProfilePolicy.USER);
     }
